--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <picture>
             <source srcset="./assets/svg/Logo-320.svg" media="(max-width: 500px)">
             <source srcset="./assets/svg/Logo-1024.svg" media="(max-width: 1285px)">
-            <img src="./assets/svg/logo.svg" alt="Logo"/>
+            <img src="./assets/svg/logo.svg" alt="Логотип Евклид"/>
           </picture>
         </a>
         <nav class="nav header__nav">
@@ -51,8 +51,8 @@
           </ul>
         </nav>
         <div class="search">
-          <input class="search__input" type="text" placeholder="Что будем искать?">
-          <button class="btn search__btn search__open" type="button">
+          <input class="search__input" type="text" placeholder="Что будем искать?" tabindex="-1" aria-hidden="true">
+          <button class="btn search__btn search__open" type="button" aria-label="Поиск">
             <svg
               width="26"
               height="26"
@@ -77,7 +77,7 @@
               />
             </svg>
           </button>
-          <button class="btn search__btn search__reset visually-hidden" type="button">
+          <button class="btn search__btn search__reset" type="button" aria-label="Очистить поиск">
             <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="8.95386" y="7.30435" width="11.6645" height="2.33291" transform="rotate(45 8.95386 7.30435)" fill="#999999"/>
               <rect x="7.30432" y="15.5524" width="11.6645" height="2.33291" transform="rotate(-45 7.30432 15.5524)" fill="#999999"/>
@@ -103,8 +103,8 @@
                   <div class="swiper-pagination"></div>
                 </div>
                 <div class="text-box">
-                  <h2 class="hero__title">Проектные решения любой сложности</h2>
-                  <p class="hero__text">
+                  <h2 class="hero__title section-title" tabindex="0">Проектные решения любой сложности</h2>
+                  <p class="hero__text" tabindex="0">
                     Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день
                     остаются уделом проектантов
                   </p>
@@ -118,8 +118,8 @@
 
       <section class="about-us" id="about-us-section">
         <div class="container">
-          <h2 class="section-title about-us__title">О нас</h2>
-          <p class="about-us__text">
+          <h2 class="section-title about-us__title" tabindex="0">О нас</h2>
+          <p class="about-us__text" tabindex="0" aria-label="Текст о Нас">
             Также как перспективное планирование создаёт необходимость включения в
             производственный план целого ряда внеочередных мероприятий с учётом комплекса
             экспериментов, поражающих по своей масштабности и грандиозности. А также диаграммы
@@ -136,7 +136,7 @@
             <img class="about-us__img" src="./assets/img/About-us-320.jpg" alt="Процесс монтажа">
             <div class="about-us__block">
               <div class="description">
-                <p class="description__text">
+                <p class="description__text" tabindex="0">
                   Принимая во внимание показатели успешности, перспективное
                   планирование способствует подготовке и реализации новых
                   принципов.
@@ -147,7 +147,7 @@
 
             <ul class="site-list about-us__list">
               <li class="about-us__list-item about-us-top">
-                <p class="about-us__list-item-text">
+                <p class="about-us__list-item-text" tabindex="0">
                   <span>Консультация с широким активом</span><br>
                   А также свежий взгляд на привычные вещи - безусловно открывает
                   новые горизонты для как самодостаточных, так и внешне
@@ -155,7 +155,7 @@
                 </p>
               </li>
               <li class="about-us__list-item about-us-bottom">
-                <p class="about-us__list-item-text">
+                <p class="about-us__list-item-text" tabindex="0">
                   <span>В своём стремлении повысить</span><br>
                   Качество жизни, они забывают, что сплочённость команды
                   профессионалов представляет собой интересный эксперимент
@@ -169,26 +169,26 @@
 
       <section class="consult" id="consult-section">
         <div class="container">
-          <h2 class="section-title consult__title">Как мы работаем</h2>
+          <h2 class="section-title consult__title" tabindex="0">Как мы работаем</h2>
           <ul class="site-list consult__list tabs">
             <li class="consult__list-item tabs__item">
-              <button class="consult__list-item-btn btn tabs__btn tabs__btn--active" data-path="step-1">1 шаг</button>
+              <button class="consult__list-item-btn btn tabs__btn tabs__btn--active" data-path="step-1" aria-label="первый шаг" tabindex="0">1 шаг</button>
             </li>
             <li class="consult__list-item tabs__item">
-              <button class="consult__list-item-btn btn tabs__btn" data-path="step-2">2 шаг</button>
+              <button class="consult__list-item-btn btn tabs__btn" data-path="step-2" aria-label="второй шаг">2 шаг</button>
             </li>
             <li class="consult__list-item tabs__item">
-              <button class="consult__list-item-btn btn tabs__btn" data-path="step-3">3 шаг</button>
+              <button class="consult__list-item-btn btn tabs__btn" data-path="step-3" aria-label="третий шаг">3 шаг</button>
             </li>
             <li class="consult__list-item tabs__item">
-              <button class="consult__list-item-btn btn tabs__btn" data-path="step-4">4 шаг</button>
+              <button class="consult__list-item-btn btn tabs__btn" data-path="step-4" aria-label="четвёртый шаг">4 шаг</button>
             </li>
           </ul>
 
           <div class="block tab-content tab-content--active" data-target="step-1">
             <div class="block__wrapper">
-              <h3 class="block__text-title">Проводим консультацию</h3>
-              <p class="block__text">
+              <h3 class="block__text-title" tabindex="0">Проводим консультацию</h3>
+              <p class="block__text" tabindex="0">
                 Влечет за собой процесс внедрения и модернизации приоритизации
                 разума над эмоциями. В рамках спецификации современных
                 стандартов, некоторые особенности внутренней политики будут
@@ -223,8 +223,8 @@
 
           <div class="block tab-content" data-target="step-2">
             <div class="block__wrapper">
-              <h3 class="block__text-title">Составляем смету</h3>
-              <p class="block__text">
+              <h3 class="block__text-title" tabindex="0">Составляем смету</h3>
+              <p class="block__text" tabindex="0">
                 Внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов,
                 некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями.
                 А также представители современных социальных резервов, инициированные исключительно синтетически,
@@ -249,8 +249,8 @@
 
           <div class="block tab-content" data-target="step-3">
             <div class="block__wrapper">
-              <h3 class="block__text-title">Привлекаем подрядчиков</h3>
-              <p class="block__text">
+              <h3 class="block__text-title" tabindex="0">Привлекаем подрядчиков</h3>
+              <p class="block__text" tabindex="0">
                 Идейные соображения высшего порядка, а также новая модель организационной деятельности требует анализа
                 прогресса профессионального сообщества. Высокий уровень вовлечения представителей целевой аудитории
                 является четким доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит
@@ -277,8 +277,8 @@
 
           <div class="block tab-content" data-target="step-4">
             <div class="block__wrapper">
-              <h3 class="block__text-title">Инспектируем все этапы работ</h3>
-              <p class="block__text">
+              <h3 class="block__text-title" tabindex="0">Инспектируем все этапы работ</h3>
+              <p class="block__text" tabindex="0">
                 Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта:
                 высококачественный прототип будущего проекта напрямую зависит от дальнейших направлений развития.
                 Разнообразный и богатый опыт говорит нам, что новая модель организационной деятельности говорит о
@@ -306,7 +306,7 @@
 
       <section class="faq">
         <div class="container">
-          <h2 class="section-title faq__title">Часто задаваемые вопросы</h2>
+          <h2 class="section-title faq__title" tabindex="0">Часто задаваемые вопросы</h2>
           <ul class="site-list faq__list">
             <li class="faq__list-item accordion">
               <button class="accordion__control" aria-expanded="false">
@@ -438,6 +438,7 @@
               <a class="social__link"
                  href="https://web.facebook.com/"
                  target="_blank"
+                 aria-label="Компания Евклид на Фэйсбук"
               >
                 <svg width="61" height="61" viewbox="0 0 61 61" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M30.9166 0.120117C14.4167 0.120117 0.916672 13.6442 0.916672 30.3008C0.916672 45.3611 11.8967 57.8611 26.2366 60.1201V39.0358H18.6166V30.3008H26.2366V23.6442C26.2366 16.084 30.7066 11.9273 37.5766 11.9273C40.8466 11.9273 44.2666 12.4996 44.2666 12.4996V19.9394H40.4866C36.7666 19.9394 35.5966 22.2587 35.5966 24.6382V30.3008H43.9366L42.5866 39.0358H35.5966V60.1201C42.6659 58.9992 49.1032 55.3777 53.7464 49.9095C58.3895 44.4412 60.9326 37.4865 60.9166 30.3008C60.9166 13.6442 47.4166 0.120117 30.9166 0.120117Z" fill="#7C7C7C"/>
@@ -447,8 +448,9 @@
             <li class="social__item">
               <a
                 class="social__link"
-                href="https://www.instagram.com/"
+                href="https://vk.com/"
                 target="_blank"
+                aria-label="Компания Евклид Вконтакте"
               >
                 <svg width="60" height="60" viewbox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M30 0C13.432 0 0 13.4314 0 30C0 46.5686 13.432 60 30 60C46.568 60 60 46.5686 60 30C60 13.4314 46.568 0 30 0ZM45.2176 33.2446C46.6159 34.6103 48.0951 35.8957 49.3504 37.4026C49.9065 38.0692 50.4307 38.7585 50.8297 39.5337C51.3993 40.6392 50.8849 41.8515 49.8954 41.9171L43.7494 41.9159C42.162 42.0473 40.8988 41.4071 39.8339 40.3218C38.9837 39.457 38.195 38.5332 37.3762 37.6389C37.0416 37.2718 36.6893 36.9262 36.2695 36.6543C35.4316 36.1093 34.7036 36.2762 34.2236 37.1515C33.7344 38.0421 33.6227 39.0292 33.5761 40.0205C33.5092 41.4697 33.0721 41.8484 31.618 41.9165C28.5109 42.062 25.5628 41.5906 22.8227 40.0241C20.4055 38.6425 18.5346 36.6924 16.9043 34.4845C13.7297 30.1805 11.2984 25.4566 9.11386 20.597C8.6222 19.5026 8.98189 18.917 10.1893 18.8943C12.1952 18.8557 14.2011 18.8606 16.2071 18.8925C17.0234 18.9054 17.5636 19.3725 17.8772 20.1428C18.9612 22.8098 20.2901 25.3473 21.9554 27.7007C22.3992 28.3274 22.8522 28.9522 23.4973 29.3948C24.2093 29.8834 24.7519 29.7219 25.0877 28.9271C25.3025 28.4219 25.3952 27.8817 25.4418 27.3404C25.6014 25.486 25.6205 23.6323 25.3442 21.7854C25.1724 20.6296 24.5224 19.8832 23.3702 19.6647C22.7834 19.5536 22.8694 19.3363 23.1548 19.0011C23.6501 18.4217 24.1142 18.0632 25.0416 18.0632L31.9857 18.062C33.0801 18.2768 33.3256 18.7679 33.4742 19.8703L33.4803 27.5871C33.4674 28.0137 33.6945 29.2782 34.4606 29.5574C35.0744 29.76 35.4795 29.2677 35.8465 28.8792C37.5118 27.112 38.6983 25.0263 39.7608 22.8675C40.2298 21.9155 40.6343 20.9303 41.0271 19.9433C41.3193 19.2135 41.7735 18.8544 42.5972 18.8667L49.2841 18.8747C49.4811 18.8747 49.6812 18.8765 49.8764 18.9103C51.0034 19.103 51.3121 19.5879 50.9635 20.6873C50.4147 22.4145 49.3485 23.8533 48.3063 25.2958C47.1892 26.8401 45.9977 28.3304 44.8917 29.8815C43.8752 31.2994 43.9556 32.0133 45.2176 33.2446Z" fill="#7C7C7C"/>
@@ -457,8 +459,9 @@
             </li>
             <li class="social__item">
               <a class="social__link"
-                href="https://vk.com/"
+                href="https://www.instagram.com/"
                 target="_blank"
+                aria-label="Компания Евклид в Инстаграм"
               >
               <svg width="60" height="60" viewbox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.2578 30C24.2578 33.1714 26.8286 35.7422 30 35.7422C33.1714 35.7422 35.7422 33.1714 35.7422 30C35.7422 26.8286 33.1714 24.2578 30 24.2578C26.8286 24.2578 24.2578 26.8286 24.2578 30Z" fill="#7C7C7C"/>
@@ -471,11 +474,12 @@
         </div>
 
         <section class="text-us-section">
-          <h2 class="section-title text-us-section__title">Оставить заявку</h2>
+          <h2 class="section-title text-us-section__title" tabindex="0">Оставить заявку</h2>
           <form
             class="form"
             action="https://jsonplaceholder.typicode.com/posts"
             method="POST"
+            autocomplete="off"
           >
             <input
               class="form__input"
@@ -484,7 +488,7 @@
               name="name"
               placeholder="Фамилия, имя и отчество*"
               required
-            />
+            >
             <input
               class="form__input"
               id="email"
@@ -492,7 +496,7 @@
               name="email"
               placeholder="E-mail*"
               required
-            />
+            >
             <textarea
               class="form__input textarea"
               name="textarea"
@@ -525,7 +529,7 @@
           <hr>
         </section>
         <div class="footer__right">
-          <p class="footer__right-text">
+          <p class="footer__right-text" tabindex="0">
             Высокий уровень вовлечения представителей целевой аудитории является
             четким доказательством простого факта: разбавленное изрядной долей
             эмпатии, рациональное мышление позволяет оценить значение модели
